[FIX] Added more services to home page

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li class="dropdown"><a href="#services"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
+          <!-- <li class="dropdown"><a href="#services"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="pages/exampad.html">Exampad</a></li>
             </ul>
-          </li>
+          </li> -->
           <li class="dropdown"><a href="#services"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="pages/custom_software.html">Custom Software Development</a></li>
@@ -129,7 +129,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Hosting</a></h4>
+              <h4 class="title"><a href="pages/custom_software.html">Custom Software Development</a></h4>
               <p class="description">We provide everything you need, including shared and dedicated hosting, domain registration, SSL certificates, email hosting, backups, advanced security, a global CDN, website builders, and 24/7 support.</p>
             </div>
           </div>
@@ -137,7 +137,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Website Builder</a></h4>
+              <h4 class="title"><a href="pages/consulting_and_advisory.html">Consulting and Advisory</a></h4>
               <p class="description">Intuitive drag-and-drop tools, pre-designed templates, custom domain integration, SEO optimization, mobile responsiveness, e-commerce functionality, and 24/7 support to help you create a stunning website effortlessly.</p>
             </div>
           </div>
@@ -145,7 +145,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Business-grade Email</a></h4>
+              <h4 class="title"><a href="pages/managed_services.html">Managed Services</a></h4>
               <p class="description">Secure, professional email addresses, ample storage, spam and virus protection, calendar integration, mobile access, and 24/7 support to ensure seamless communication.</p>
             </div>
           </div>
@@ -153,7 +153,47 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="">SSL Certificates</a></h4>
+              <h4 class="title"><a href="pages/data_and_analytics.html">Data and Analytics</a></h4>
+              <p class="description">We offer SSL certificates with robust encryption, enhance website security, boost SEO rankings, ensure data integrity, enable HTTPS, and provide customer trust with easy installation and 24/7 support.</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
+              <div class="icon"><i class="bx bx-world"></i></div>
+              <h4 class="title"><a href="pages/digital_transformation.html">Digital Transformation</a></h4>
+              <p class="description">We offer SSL certificates with robust encryption, enhance website security, boost SEO rankings, ensure data integrity, enable HTTPS, and provide customer trust with easy installation and 24/7 support.</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
+              <div class="icon"><i class="bx bx-world"></i></div>
+              <h4 class="title"><a href="pages/cybersecurity.html">Cybersecurity</a></h4>
+              <p class="description">We offer SSL certificates with robust encryption, enhance website security, boost SEO rankings, ensure data integrity, enable HTTPS, and provide customer trust with easy installation and 24/7 support.</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
+              <div class="icon"><i class="bx bx-world"></i></div>
+              <h4 class="title"><a href="pages/training_and_support.html">Training and Support</a></h4>
+              <p class="description">We offer SSL certificates with robust encryption, enhance website security, boost SEO rankings, ensure data integrity, enable HTTPS, and provide customer trust with easy installation and 24/7 support.</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
+              <div class="icon"><i class="bx bx-world"></i></div>
+              <h4 class="title"><a href="pages/devops_and_cloud_infrastructure.html">DevOps and Cloud Infrastructure</a></h4>
+              <p class="description">We offer SSL certificates with robust encryption, enhance website security, boost SEO rankings, ensure data integrity, enable HTTPS, and provide customer trust with easy installation and 24/7 support.</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
+              <div class="icon"><i class="bx bx-world"></i></div>
+              <h4 class="title"><a href="pages/emerging_technologies.html">Emerging Technologies</a></h4>
               <p class="description">We offer SSL certificates with robust encryption, enhance website security, boost SEO rankings, ensure data integrity, enable HTTPS, and provide customer trust with easy installation and 24/7 support.</p>
             </div>
           </div>
@@ -985,7 +1025,7 @@
 
     <div class="container py-4">
       <div class="copyright">
-        Copyright &copy;2024 <span>Linespace Software</span>. All Rights Reserved.
+        Copyright &copy;2024 <span>Linespace Software (PTY) Ltd</span>. All Rights Reserved.
       </div>
       <div class="credits">
       </div>
