--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
         </div>
 
       </div>
-    </section><!-- End Featured Services Section -->
+    </section>
+    <!-- End Featured Services Section -->
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about section-bg">
@@ -224,47 +225,36 @@
         <div class="section-title">
           <h2>What We Do</h2>
         </div>
-        <div class="section-about-us p">
-          <p>We specialize in delivering innovative software solutions that drive organization success. With a deep understanding of the evolving technological landscape, our mission is to provide cutting-edge software services tailored to meet the unique needs of our clients, from startups to global enterprises.</p>
-          <p>Our extensive range of software solutions includes custom software development, consulting and advisory, managed services, data and analytics, digital transformation, cybersecurity, training and support, devops and cloud Infrastructure, and emerging technologies. We leverage the latest technologies to ensure our software is scalable, reliable, and secure, enabling organizations to operate efficiently and effectively in the digital age.</p>
-          <p>What distinguishes us is our unwavering commitment to quality and customer satisfaction. We work around the clock to provide exceptional support and ensure that our software solutions deliver optimal performance. We prioritize security, performance, and user experience, ensuring that our clients can focus on their core business objectives without worrying about their IT infrastructure.
-          </p>
-          <p>We believe in forging strong, lasting partnerships with our clients, offering personalized service and solutions that adapt to their growing needs. Trust us to be your dependable partner in navigating the complexities of the digital world, delivering the software and support you need to succeed.</p>
-
-        </div>
-        <!-- <div class="row">
+        <div class="row">
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
             <img src="#" class="img-fluid" alt="">
           </div>
           <div class="content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>We specialize in delivering innovative software solutions that drive organization success.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              With a deep understanding of the evolving technological landscape, our mission is to provide cutting-edge software services tailored to meet the unique needs of our clients, from startups to global enterprises.
             </p>
             <ul>
               <li>
                 <i class="bx bx-store-alt"></i>
                 <div>
-                  <h5>Ullamco laboris nisi ut aliquip consequat</h5>
-                  <p>Magni facilis facilis repellendus cum excepturi quaerat praesentium libre trade</p>
+                  <h5>Solutions</h5>
+                  <p>Our extensive range of software solutions includes custom software development, consulting and advisory, managed services, data and analytics, digital transformation, cybersecurity, training and support, devops and cloud Infrastructure, and emerging technologies. We leverage the latest technologies to ensure our software is scalable, reliable, and secure, enabling organizations to operate efficiently and effectively in the digital age.</p>
                 </div>
               </li>
               <li>
                 <i class="bx bx-images"></i>
                 <div>
-                  <h5>Magnam soluta odio exercitationem reprehenderi</h5>
-                  <p>Quo totam dolorum at pariatur aut distinctio dolorum laudantium illo direna pasata redi</p>
+                  <h5>What makes us different?</h5>
+                  <p>What distinguishes us is our unwavering commitment to quality and customer satisfaction. We work around the clock to provide exceptional support and ensure that our software solutions deliver optimal performance. We prioritize security, performance, and user experience, ensuring that our clients can focus on their core business objectives without worrying about their IT infrastructure.</p>
                 </div>
               </li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              We believe in forging strong, lasting partnerships with our clients, offering personalized service and solutions that adapt to their growing needs. Trust us to be your dependable partner in navigating the complexities of the digital world, delivering the software and support you need to succeed.
             </p>
           </div>
-        </div> -->
+        </div>
 
       </div>
     </section><!-- End About Section -->
@@ -614,96 +604,8 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
-
-    <!-- ======= Team Section ======= -->
-    <!-- <section id="team" class="team section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Team</h2>
-          <h3>Our Hardworking <span>Team</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section>End Team Section -->
+    </section>
+    <!-- End Portfolio Section -->
 
     <!-- ======= Pricing Section ======= -->
     <!-- <section id="pricing" class="pricing">
@@ -919,7 +821,8 @@
         </div>
 
       </div>
-    </section><!-- End Frequently Asked Questions Section -->
+    </section>
+    <!-- End Frequently Asked Questions Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -991,26 +894,28 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>
+    <!-- End Contact Section -->
 
-  </main><!-- End #main -->
+  </main>
+  <!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
-    <!-- <div class="footer-newsletter">
+    <div class="footer-newsletter">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6">
             <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p></p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <div class="footer-top">
       <div class="container">
@@ -1075,7 +980,8 @@
       <div class="credits">
       </div>
     </div>
-  </footer><!-- End Footer -->
+  </footer>
+  <!-- End Footer -->
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
@@ -1094,5 +1000,4 @@
   <script src="assets/js/main.js"></script>
 
 </body>
-
 </html>
