--- a/index.html
+++ b/index.html
@@ -978,6 +978,11 @@
         Copyright &copy;2024 <span>Linespace Software</span>. All Rights Reserved.
       </div>
       <div class="credits">
+        <a href="pages/privacy_policy.html">Privacy Policy</a>&nbsp;&nbsp;
+        <a href="pages/terms_of_service.html.html">Terms of Service</a>&nbsp;&nbsp;
+        <a href="pages/privacy_policy.html">Cookies</a>&nbsp;&nbsp;
+        <a href="pages/terms_of_service.html.html">PAIA Manual</a>&nbsp;&nbsp;
+        <a href="pages/terms_of_service.html.html">Legal</a>
       </div>
     </div>
   </footer>
