--- a/pages/custom_software.html
+++ b/pages/custom_software.html
@@ -51,38 +51,31 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="../index.html">Linespace<span>.</span></a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
+      <h1 class="logo"><a href="../index.html">Linespace<span></span></a></h1>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="../index.html">Home</a></li>
-          <!-- <li><a class="nav-link scrollto" href="#about">About</a></li> -->
-          <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto" href="../index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="pages/about.html">About</a></li>
+          <li class="dropdown"><a href="pages/services.html"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="exampad.html">Exampad</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="custom_software.html">Custom Software Development</a></li>
-              <li><a href="consulting_and_advisory.html">Consulting and Advisory</a></li>
-              <li><a href="managed_services.html">Managed Services</a></li>
-              <li><a href="data_and_analytics.html">Data and Analytics</a></li>
-              <li><a href="digital_transformation.html">Digital Transformation</a></li>
-              <li><a href="cybersecurity.html">Cybersecurity</a></li> 
-              <li><a href="exampad.html">Training and Support</a></li> 
-              <li><a href="devops_and_cloud.html">DevOps and Cloud Infrastructure</a></li> 
-              <li><a href="emerging.html">Emerging Technologies</a></li> 
+              <li><a href="#">Custom Software Development</a></li>
+              <li><a href="pages/consulting_and_advisory.html">Consulting and Advisory</a></li>
+              <li><a href="pages/managed_services.html">Managed Services</a></li>
+              <li><a href="pages/data_and_analytics.html">Data and Analytics</a></li>
+              <li><a href="pages/digital_transformation.html">Digital Transformation</a></li>
+              <li><a href="pages/cybersecurity.html">Cybersecurity</a></li> 
+              <li><a href="pages/training_and_support.html">Training and Support</a></li> 
+              <li><a href="pages/devops_and_cloud.html">DevOps and Cloud Infrastructure</a></li> 
+              <li><a href="pages/emerging.html">Emerging Technologies</a></li> 
             </ul>
           </li>
           <li class="dropdown"><a href="#services"><span>Open Source</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="rabbit.html">Rabbit</a></li>
+              <li><a href="pages/rabbit.html">Rabbit</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto " href="portfolio.html">Portfolio</a></li>
+          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -100,10 +93,11 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li> -->
-          <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav>
+      <!-- .navbar -->
 
     </div>
   </header><!-- End Header -->
@@ -134,7 +128,8 @@
       </div>
     </section>
 
-  </main><!-- End #main -->
+  </main>
+  <!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
@@ -144,7 +139,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-6">
             <h4>Join Our Newsletter</h4>
-            <p>Join our newsletter today to stay informed about our latest service, exclusive offers, and insider tips! Be the first to know about exciting updates and developments in our industry. Don't miss out on valuable insights and special promotions - subscribe now and elevate your experience with us!</p>
+            <p></p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -158,13 +153,10 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>BizLand<span>.</span></h3>
+            <h3>Linespace<span></span></h3>
             <p>
-              Nkoseluhlaza street <br>
-              Manzini, M200<br>
-              Eswatini <br><br>
-              <strong>Phone:</strong> (+268) 7600 000<br>
-              <strong>Email:</strong> info@linespace.com<br>
+              <strong>Call:</strong> +268-3550-XXXX<br>
+              <strong>Email:</strong> info@linespacesoftware.com<br>
             </p>
           </div>
 
@@ -172,33 +164,38 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="about.html">About</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="products.html">Products</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="services.html">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="open_source.html">Open Source</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="terms_of_service.html">Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="privacy_policy.html">Privacy policy</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="consulting_and_advisory.html">Consulting and Advisory</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="managed_services.html">Managed Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="data_and_analytics.html">Data and Analytics</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="digital_transformation.html">Digital Transformation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="cybersecurity.html">Cybersecurity</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="training_and_support.html">Training and Support</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="devops_and_cloud.html">DevOps and Cloud Infrastructure</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="emerging.html">Emerging Technologies</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Social Networks</h4>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+            <p>Reliable solutions for complex organization challenges.</p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://github.com/linespacesoftware/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+              <a href="https://www.linkedin.com/company/103179901/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.x.com/linespacesoftware/" target="_blank" class="Twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=61559912188835&mibextid=ZbWKwL" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="https://www.instagram.com/linespacesoftware/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
             </div>
           </div>
 
@@ -208,17 +205,13 @@
 
     <div class="container py-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>BizLand</span></strong>. All Rights Reserved
+        Copyright &copy;2024 <span>Linespace Software</span>. All Rights Reserved.
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bizland-bootstrap-business-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
-  </footer><!-- End Footer -->
+  </footer>
+  <!-- End Footer -->
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
