--- a/pages/custom_software.html
+++ b/pages/custom_software.html
@@ -216,6 +216,62 @@
     </section>
     <!-- End Featured Services Section -->
 
+    <section id="featured-services" class="featured-services">
+      <div class="container" data-aos="fade-up">
+        <div class="section-title">
+          <h2>Our Development Process</h2>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+              <h4 class="title"><a href="#">1.  Requirement Analysis</a></h4>
+              <p class="description">We first understand your business needs and objectives through detailed consultations and requirement gathering sessions then define the scope of the project, including features, functionalities, and timelines. 
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
+              <h4 class="title"><a href="#">2. Design and Prototyping</a></h4>
+              <p class="description">We will then create wireframes and prototypes to visualize the user interface and user experience to gather feedback to refine the design and ensure it aligns with your vision.
+
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
+              <h4 class="title"><a href="#">3. Development</a></h4>
+              <p class="description">We'll use agile development methodologies to build the software iteratively, allowing for continuous feedback and improvements to ensure high-quality code through best practices and regular code reviews.
+
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
+              <h4 class="title"><a href="#">4. Testing and Quality Assurance</a></h4>
+              <p class="description">We'll conduct thorough testing, including unit testing, integration testing, and user acceptance testing (UAT), to identify and fix any issues and also ensure the software meets all performance, security, and usability standards.
+                
+              </p>
+            </div>
+          </div>
+
+
+          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
+              <h4 class="title"><a href="#">5. Deployment and Maintenance</a></h4>
+              <p class="description">Lastly, we'll deploy the software to your preferred environment, whether it's on-premises, cloud, or hybrid then provide ongoing maintenance and support to ensure the software remains up-to-date and performs optimally.
+                
+              </p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <!-- End Featured Services Section -->
+
     <section id="faq" class="faq section-bg">
       <div class="container" data-aos="fade-up">
 
