[FIX] Custom software page bug

--- a/pages/custom_software.html
+++ b/pages/custom_software.html
@@ -208,7 +208,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <h4 class="title"><a href="#">System Integration</a></h4>
-              <p class="description">ntegrate desktop applications with existing systems and databases to streamline workflows and improve data management.</p>
+              <p class="description">We integrate desktop applications with existing systems and databases to streamline workflows and improve data management.</p>
             </div>
           </div>
         </div>
