[DEL] Useless pages

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.ico" rel="icon">
+  <link href="assets/img/apple-touch-icon.ico" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -72,8 +72,8 @@
               <li><a href="pages/digital_transformation.html">Digital Transformation</a></li>
               <li><a href="pages/cybersecurity.html">Cybersecurity</a></li> 
               <li><a href="pages/training_and_support.html">Training and Support</a></li> 
-              <li><a href="pages/devops_and_cloud.html">DevOps and Cloud Infrastructure</a></li> 
-              <li><a href="pages/emerging.html">Emerging Technologies</a></li> 
+              <li><a href="pages/devops_and_cloud_infrastructure.html">DevOps and Cloud Infrastructure</a></li> 
+              <li><a href="pages/emerging_technologies.html">Emerging Technologies</a></li> 
             </ul>
           </li>
           <li class="dropdown"><a href="#services"><span>Open Source</span> <i class="bi bi-chevron-down"></i></a>
@@ -952,8 +952,8 @@
               <li><i class="bx bx-chevron-right"></i> <a href="pages/digital_transformation.html">Digital Transformation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="pages/cybersecurity.html">Cybersecurity</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="pages/training_and_support.html">Training and Support</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="pages/devops_and_cloud.html">DevOps and Cloud Infrastructure</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="pages/emerging.html">Emerging Technologies</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/devops_and_cloud_infrastructure.html">DevOps and Cloud Infrastructure</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/emerging_technologies.html">Emerging Technologies</a></li>
             </ul>
           </div>
 
