--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span><a href="tel:+268-7683-6426">+268-7683-6426</a></span></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span><a href="tel:+268-7943-5667">+268-7943-5667</a></span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://github.com/linespacesoftware/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
@@ -64,7 +62,7 @@
               <li><a href="services/exampad.html">Exampad</a></li>
             </ul>
           </li> -->
-          <li class="dropdown"><a href="#services"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#featured-services"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="services/custom_software.html">Custom Software Development</a></li>
               <li><a href="services/consulting_and_advisory.html">Consulting and Advisory</a></li>
@@ -77,9 +75,9 @@
               <li><a href="services/emerging_technologies.html">Emerging Technologies</a></li> 
             </ul>
           </li>
-          <li class="dropdown"><a href="#services"><span>Open Source</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="open-source/open-source.html"><span>Open Source</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="services/rabbit.html">Rabbit</a></li>
+              <li><a href="open-source/rabbit.html">Rabbit</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
@@ -934,12 +932,9 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/about.html">About</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/products.html">Products</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/services.html">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services/open_source.html">Open Source</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="legal/terms_of_service.html">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="legal/privacy_policy.html">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about">About</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#featured-services">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="open-source/open-source.html">Open Source</a></li>
             </ul>
           </div>
 
@@ -978,11 +973,15 @@
       <div class="copyright">
         Copyright &copy;2024 <span>Linespace Software</span>. All Rights Reserved.
       </div>
+      <br/>
+      <div class="copyright">
+        <span>Registered in the Kingdom of Eswatini</span>.
+      </div>
       <div class="credits">
-        <a href="legal/privacy_policy.html">Privacy Policy</a>&nbsp;&nbsp;
-        <a href="legal/terms_of_service.html.html">Terms of Service</a>&nbsp;&nbsp;
-        <a href="legal/privacy_policy.html">Cookies</a>&nbsp;&nbsp;
-        <a href="legal/paia_manual.html">PAIA Manual</a>&nbsp;&nbsp;
+        <a href="legal/privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;
+        <a href="legal/terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
+        <a href="legal/cookies.html">Cookies</a>&nbsp;&nbsp;
+        <a href="legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
       </div>
     </div>
   </footer>
