--- a/services/custom_software.html
+++ b/services/custom_software.html
@@ -487,13 +487,17 @@
   
       <div class="container py-4">
         <div class="copyright">
-          Copyright &copy;2024 <span>Linespace Software</span>. All Rights Reserved.
+          Copyright &copy;2024 <span>Linespace Software</span>. All Rights Reserved. 
+        </div>
+        <br/>
+        <div class="copyright">
+          <span>Registered in the Kingdom of Eswatini</span>.
         </div>
         <div class="credits">
-          <a href="../legal/privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;
-          <a href="../legal/terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
-          <a href="../legal/cookies.html">Cookies</a>&nbsp;&nbsp;
-          <a href="../legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
+          <a href="legal/privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;
+          <a href="legal/terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
+          <a href="legal/cookies.html">Cookies</a>&nbsp;&nbsp;
+          <a href="legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
         </div>
       </div>
     </footer>
