[FIX] Bug fixes

--- a/services/data_and_analytics.html
+++ b/services/data_and_analytics.html
@@ -35,7 +35,6 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+268-3550-XXXX</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://github.com/linespacesoftware/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
@@ -56,8 +55,8 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="../index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="about.html">About</a></li>
-          <li class="dropdown"><a href="services.html"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto" href="../#about">About</a></li>
+          <li class="dropdown"><a href="../#featured-services.html"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="custom_software.html">Custom Software Development</a></li>
               <li><a href="consulting_and_advisory.html">Consulting and Advisory</a></li>
@@ -67,7 +66,7 @@
               <li><a href="cybersecurity.html">Cybersecurity</a></li> 
               <li><a href="training_and_support.html">Training and Support</a></li> 
               <li><a href="devops_and_cloud.html">DevOps and Cloud Infrastructure</a></li> 
-              <li><a href="emerging.html">Emerging Technologies</a></li> 
+              <li><a href="emerging_technologies.html">Emerging Technologies</a></li> 
             </ul>
           </li>
           <li class="dropdown"><a href="#services"><span>Open Source</span> <i class="bi bi-chevron-down"></i></a>
