--- a/index.html
+++ b/index.html
@@ -923,6 +923,7 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Linespace<span></span></h3>
             <p>
+              We specialize in creating tailored software solutions that meet the unique needs of individuals, businesses, and organizations. Our mission is to empower our clients with cutting-edge technology and exceptional service.<br><br>
               <strong>Call:</strong> <a href="tel:+268-7683-6426">+268-7683-6426</a>, <a href="tel:+268-7943-5667">+268-7943-5667</a><br>
               <strong>Email:</strong> info@linespacesoftware.com<br>
             </p>
@@ -955,7 +956,6 @@
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Social Networks</h4>
-            <p>Reliable solutions for complex organization challenges.</p>
             <div class="social-links mt-3">
               <a href="https://github.com/linespacesoftware/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
               <a href="https://www.linkedin.com/company/103179901/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
