--- a/services/custom-websites/custom-websites.html
+++ b/services/custom-websites/custom-websites.html
@@ -5,27 +5,27 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Custom Software Development - Linespace Software</title>
+  <title>Custom Websites - Linespace Software</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="../assets/img/favicon.ico" rel="icon">
-  <link href="../assets/img/apple-touch-icon.ico" rel="apple-touch-icon">
+  <link href="../../assets/img/favicon.ico" rel="icon">
+  <link href="../../assets/img/apple-touch-icon.ico" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="../assets/css/style.css" rel="stylesheet">
+  <link href="../../assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -50,31 +50,31 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="../index.html">Linespace<span></span></a></h1>
+      <h1 class="logo"><a href="../../index.html">Linespace<span></span></a></h1>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="../index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="../#about">About</a></li>
-          <li class="dropdown"><a href="../#featured-services.html"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto" href="../../index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="../../index.html#about">About</a></li>
+          <li class="dropdown"><a href=".../#featured-services.html"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Custom Software Development</a></li>
-              <li><a href="consulting_and_advisory.html">Consulting and Advisory</a></li>
-              <li><a href="managed_services.html">Managed Services</a></li>
-              <li><a href="data_and_analytics.html">Data and Analytics</a></li>
-              <li><a href="digital_transformation.html">Digital Transformation</a></li>
-              <li><a href="cybersecurity.html">Cybersecurity</a></li> 
-              <li><a href="training_and_support.html">Training and Support</a></li> 
-              <li><a href="devops_and_cloud_infrastructure.html">DevOps and Cloud Infrastructure</a></li> 
-              <li><a href="emerging_technologies.html">Emerging Technologies</a></li> 
+              <li><a href="../../services/custom_software.html">Custom Software Development</a></li>
+              <li><a href="../../services/consulting_and_advisory.html">Consulting and Advisory</a></li>
+              <li><a href="../../services/managed_services.html">Managed Services</a></li>
+              <li><a href="../../services/data_and_analytics.html">Data and Analytics</a></li>
+              <li><a href="../../services/digital_transformation.html">Digital Transformation</a></li>
+              <li><a href="../../services/cybersecurity.html">Cybersecurity</a></li> 
+              <li><a href="../../services/training_and_support.html">Training and Support</a></li> 
+              <li><a href="../../services/devops_and_cloud_infrastructure.html">DevOps and Cloud Infrastructure</a></li> 
+              <li><a href="../../services/emerging_technologies.html">Emerging Technologies</a></li> 
             </ul>
           </li>
-          <li class="dropdown"><a href="../open-source/open-source.html"><span>Open Source</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="../../open-source/open-source.html"><span>Open Source</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="open-source/rabbit.html">Rabbit</a></li>
+              <li><a href="../../open-source/rabbit.html">Rabbit</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto " href="../#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto " href="../../#portfolio">Portfolio</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -108,11 +108,11 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Custom Software Development</h2>
+          <h2>Custom Websites</h2>
           <ol>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../#featured-services">Services</a></li>
-            <li>Custom Software Development</li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="../../index.html#featured-services">Services</a></li>
+            <li>Custom Websites</li>
           </ol>
         </div>
 
@@ -135,7 +135,7 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <h4 class="title"><a href="custom-websites/custom-websites.html">Custom Websites</a></h4>
+              <h4 class="title"><a href="#">Custom Websites</a></h4>
               <p class="description">We design and develop bespoke websites that reflect your brand identity and meet your organization's objectives.
               </p>
             </div>
@@ -447,10 +447,10 @@
             <div class="col-lg-3 col-md-6 footer-links">
               <h4>Useful Links</h4>
               <ul>
-                <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="../#about">About</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="../#featured-services">Services</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="../open-source/open-source.html">Open Source</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="../../index.html">Home</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="../../index.html#about">About</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="../../index.html#featured-services">Services</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="../../open-source/open-source.html">Open Source</a></li>
               </ul>
             </div>
   
@@ -458,14 +458,14 @@
               <h4>Our Services</h4>
               <ul>
                 <li><i class="bx bx-chevron-right"></i> <a href="#">Custom Software Development</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="consulting_and_advisory.html">Consulting and Advisory</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="managed_services.html">Managed Services</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="data_and_analytics.html">Data and Analytics</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="digital_transformation.html">Digital Transformation</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="cybersecurity.html">Cybersecurity</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="training_and_support.html">Training and Support</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="devops_and_cloud_infrastructure.html">DevOps and Cloud Infrastructure</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="emerging_technologies.html">Emerging Technologies</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="../../services/consulting_and_advisory.html">Consulting and Advisory</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="../../services/managed_services.html">Managed Services</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="../../services/data_and_analytics.html">Data and Analytics</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="../../services/digital_transformation.html">Digital Transformation</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="../../services/cybersecurity.html">Cybersecurity</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="../../services/training_and_support.html">Training and Support</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="../../services/devops_and_cloud_infrastructure.html">DevOps and Cloud Infrastructure</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="../../services/emerging_technologies.html">Emerging Technologies</a></li>
               </ul>
             </div>
   
@@ -494,10 +494,10 @@
           <span>Registered in the Kingdom of Eswatini</span>.
         </div>
         <div class="credits">
-          <a href="../legal/privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;
-          <a href="../legal/terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
-          <a href="../legal/cookies.html">Cookies</a>&nbsp;&nbsp;
-          <a href="../legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
+          <a href="../../legal/privacy-policy.html">Privacy Policy</a>&nbsp;&nbsp;
+          <a href="../../legal/terms-of-service.html">Terms of Service</a>&nbsp;&nbsp;
+          <a href="../../legal/cookies.html">Cookies</a>&nbsp;&nbsp;
+          <a href="../../legal/paia-manual.html">PAIA Manual</a>&nbsp;&nbsp;
         </div>
       </div>
 
@@ -508,17 +508,17 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="../assets/vendor/aos/aos.js"></script>
-  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="../assets/vendor/php-email-form/validate.js"></script>
+  <script src="../../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../../assets/vendor/aos/aos.js"></script>
+  <script src="../../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../../assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../../assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../../assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="../../assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="../assets/js/main.js"></script>
+  <script src="../../assets/js/main.js"></script>
 
 </body>
 
